# server/middleware/tokenValidation.js
@@ -1,25 +1,20 @@
-const jwt = require('jsonwebtoken')
-const { restart } = require('nodemon')
+const jwt = require("jsonwebtoken")
 
 module.exports.validateToken = (req, res, next) => {
-  let response = {}
-
   try {
     if (!req.headers.authorization) {
-      throw new Error('Token is missing from header')
+      throw new Error("Token is missing from header")
     }
 
-    const userToken = req.headers.authorization.split('Bearer')[1].trim()
+    const userToken = req.headers.authorization.split("Bearer ")[1]
     const decodedToken = jwt.verify(
       userToken,
-      process.env.SECRET_KEY || 'default-secret-key'
+      process.env.SECRET_KEY || "default-secret-key"
     )
-    return next()
+    req.user = decodedToken // Stocker les informations du token dans la requête
+    next()
   } catch (error) {
-    console.error('Error in tokenValidation.js', error)
-    response.status = 401
-    response.message = error.message
+    console.error("Error in tokenValidation.js", error)
+    res.status(401).send({ message: error.message })
   }
-
-  return res.status(response.status).send(response)
 }
